<resources>
    <string name="app_name">GXPlayer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Song_Title">Song Title</string>
    <string name="Song_Artist">Artist name</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_denied">Permission Denied.</string>
    <string name="Song_Duration">Duration</string>
    <string name="Album_thumb">Album_thumbnail</string>
    <string name="App_icon">App Icon</string>
    <string name="previousButton">previousButton</string>
    <string name="play_pauseButton">play_pauseButton</string>
    <string name="nextButton">nextButton</string>
    <string name="optionButton">optionButton</string>
    <string name="exit">Exit</string>
    <string name="website_name">santoshkumarsingh.com</string>
    <string name="PLAY">1</string>
    <string name="PAUSE">2</string>
    <string name="NEXT">3</string>
    <string name="PREVIOUS">4</string>
    <string name="SERVICE_CONNECTED">CONNECTED</string>
    <string name="RealmDatabaseName">favorite.realm</string>
    <string name="VERSION">1</string>
    <string name="FavoriteMarked">Marked as favorite</string>
    <string name="Already_exists">Already marked as favorite</string>
    <string name="Favorite_empty_list">Favorite list is empty</string>
    <string name="deleteButton">delete</string>
    <string name="NoDataFound">No data found.</string>
    <string name="Image_Width">230</string>
    <string name="AUDIO_STATE">audio_state</string>
    <string name="SONG_POSITION">currentPosition</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="POSITION">position</string>
    <string name="HOME_STATE">HOME_STATE</string>
    <string name="All_Audio">All</string>
    <string name="Favorite_State">STATUS</string>
    <string name="ALBUM_ID">ID</string>
    <string name="category">category</string>
    <string name="Artist">Artist</string>
    <string name="Keyword">keyword</string>
    <string name="search_bar">searchbar</string>
    <string name="Equalizer">Pick Presets</string>
    <string name="media_url_mp3">http://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_mp4">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[http://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="play_icon_upper_path_data">M 44 32 L 44 64 L 100 64 L 100 64 Z</string>
    <string name="play_icon_bottom_path_data">M 44 96 L 44 64 L 100 64 L 100 64 Z</string>
    <string name="pause_icon_upper_path_data">M 32 40 L 32 56  L 96 56 L 96 40 Z</string>
    <string name="pause_icon_bottom_path_data">M 32 88 L 32 72 L 96 72 L 96 88 Z</string>
    <string-array name="Tabs">
        <item>Audio</item>
        <item>Love</item>
        <item>Album</item>
        <item>Artist</item>
        <item>Video</item>
    </string-array>
    <string-array name="Tabs1">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="PRESETS">
        <item>Normal</item>
        <item>Classical</item>
        <item>Dance</item>
        <item>Flat</item>
        <item>Folk</item>
        <item>Heavy Metal</item>
        <item>Hip Hop</item>
        <item>Jazz</item>
        <item>Pop</item>
        <item>Rock</item>
    </string-array>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="videoURL">VIDEO_URL</string>
    <string name="app_label">SearchBar</string>
    <string name="search_hint">song name</string>
    <string name="searchedSongName">searchedTitle</string>
    <string name="list_menu">songs list</string>
    <string name="MessageType">text/plain</string>
    <string name="ExtraSubject"><![CDATA[Awesome Video & Audio Player]]></string>
    <string name="ExtraText">Hi, this is a 3 in 1 cool player which plays video and audio as well as has a recoder that allows you to recorder your karaoke with song or recoder your speech.</string>
    <string name="Share">Shared App</string>
    <string name="play_icon_group_parts">play_group</string>
    <string name="play_icon_group_top">playgroup_top</string>
    <string name="play_icon_top_path_name">play_icon_top_path</string>
    <string name="play_icon_group_bottom">play_icon_bottom_path</string>
    <string name="play_icon_bottom_path_name">playicon_bottom</string>
    <string name="BassBooster">Bass Booster</string>
    <string name="butterfly">Little butter Doesn\'t fly, either!</string>
    <string name="record_without_song">Record without song</string>
    <string name="record_with_song">Record with song</string>
    <string name="listen_karaoke">Play recording</string>
    <string name="current_playlist">Playlist</string>
    <string name="record_without_song_sub">Record your speech or karaoke without song</string>
    <string name="record_with_song_sub">Record your speech or karaoke with song</string>
    <string name="listen_karaoke_sub">Play your recorded speech or karaoke</string>
    <string name="current_playlist_sub">Open the list of songs that playing</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_interstitial">InterstitialActivity</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1940925551314668/4282211470</string>
    <string name="banner_ad_unit_id">ca-app-pub-1940925551314668/1253912828</string>
    <string name="native_ad_unit_id">ca-app-pub-1940925551314668/6681020391</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-1940925551314668/9272837791</string>
    <string name="privacy_policy">Santosh Kumar Singh built the GXPlayer app as an Ad Supported app. This SERVICE is provided by Santosh Kumar Singh at no cost and is intended for use as is.\nThis page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at GXPlayer unless otherwise defined in this Privacy Policy.\n</string>
    <string name="privacy_policy1">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to personal informations, phone record audio service, read phone state service, read phone internal and external media storage. The information that I request is retained on your device and is not collected by me in any way.\nThe app does use third party services that may collect information used to identify you.\nLink to privacy policy of third party service providers used by the app\n- Google Play Services\n- AdMob\n- Firebase Analytics\n- Piwik</string>
    <string name="privacy_policy2">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="privacy_policy3">Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. </string>
    <string name="privacy_policy4">I may employ third-party companies and individuals due to the following reasons:\n
_	To facilitate our Service;\n
_	To provide the Service on our behalf;\n
_	To perform Service-related services; or\n
_	To assist us in analyzing how our Service is used.\n
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n</string>
    <string name="privacy_policy5">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100 percent secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="privacy_policy6">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="privacy_policy7">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions. </string>
    <string name="privacy_policy8">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="privacy_policy9">Email: superssingh@gmail.com\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.
</string>
    <string name="aboutus1">About Us</string>
    <string name="ppolicy">Privacy Policy</string>
    <string name="credit">Credits</string>
</resources>