<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/aboutus1" />

        <item
            android:id="@+id/nav_privacyPolicy"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/ppolicy" />

        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/credit" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
