<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeNameHolder"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:clickable="true"
    android:elevation="8dp"

    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/Album_thumb" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/song_Title"
            style="@style/TextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/Song_Title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/song_Artist"
            style="@style/TextGray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="@string/Song_Artist"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:background="@drawable/ic_favorite_border_24dp"
        android:contentDescription="@string/optionButton" />
</LinearLayout>

