<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="230sp">


    <!--<com.example.androidaudiovisualizer.VisualizerView-->
        <!--android:id="@+id/myvisualizerview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--/>-->
    <!---->
    <ImageView
        android:id="@+id/songThumbnail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Album_thumb"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:padding="10dp"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trackArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/Song_Artist"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/trackDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingRight="10dp"
                android:text="@string/Song_Duration"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_first"
                android:contentDescription="@string/previousButton" />

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_play"
                android:contentDescription="@string/play_pauseButton" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_last"
                android:contentDescription="@string/nextButton" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>