<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeNameHolder"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:clickable="true"
    android:elevation="4dp"
    android:gravity="center"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/cardview_dark_background"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="horizontal">

        <ImageView
        android:id="@+id/F_imageView"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/Album_thumb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/F_Title"
            style="@style/TextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/Song_Title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/F_Artist"
            style="@style/TextGray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="@string/Song_Artist"
            android:textColor="#dea703"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/F_delete"
        android:layout_width="32dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:background="@drawable/ic_delete"
        android:contentDescription="@string/deleteButton" />
    </LinearLayout>
</android.support.v7.widget.CardView>

