<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/play_layout"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/black_transparent"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/track_Thumbnail"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/Album_thumb"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/trackArtist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/Song_Artist"
                    android:textColor="@color/colorWhite" />

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/current_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/Current_Play_Pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@drawable/background_round"
                android:contentDescription="@string/play_pauseButton"
                android:src="@drawable/ic_play_circle_filled" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>